feat (dashboard): Add Dashboard Page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
+@import "../fonts/Icons/feather/feather.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 .card {
   @apply relative z-0;
